--- a/resources/public/blog/css/screen.css
+++ b/resources/public/blog/css/screen.css
@@ -2,6 +2,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Alegreya';
 }
 
+h1{
+    text-align: center;
+    font-size: 50px;
+}
+
 body {
     color: #333;
     background-color: #f2f2f2;
